code/css/styles.css
* {
    font-family: 'Roboto', sans-serif;
}

.selected{
    stroke: #404040;;
    stroke-width:4;
}


#table { 
        width: 100%; 
        padding: 120px;
        border-collapse: collapse;
        margin-top: -20%;
    }
    /* Zebra striping */
    tr:nth-of-type(odd) { 
        background: #eee; 
    }
    th { 
        background: #333; 
        color: white; 
        font-weight: bold; 
        cursor: s-resize;
        background-repeat: no-repeat;
        background-position: 3% center;
    }
    td, th { 
        padding: 6px; 
        border: 1px solid #ccc; 
        text-align: left; 
    }

.d3-tip {
    line-height: 1;
    font-weight: bold;
    padding: 12px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 2px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
    box-sizing: border-box;
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: rgba(0, 0, 0, 0.8);
    content: "\25BC";
    position: absolute;
    text-align: center;
}

/* Style northward tooltips differently */
.d3-tip.n:after {
    margin: -1px 0 0 0;
    top: 100%;
    left: 0;
}

#dropdown {
    text-align: center;
    font-size: 17px;
    margin-top: 30px;
}

#playerdropdown {
    text-align: center;
    font-size: 17px;
    margin-top: 30px;
    margin-bottom: 30px;
}


.button {
   border-radius : 20px;
   outline:none;
    cursor: pointer;
    display: inline-block;
    text-align: center;
    position: relative;
    height: 60px;
    width: 210px;
    margin-top: 20px;
    margin-bottom: 10px;
    font-size: 17px;
    background-color: black;
    color: white;
    font-weight: bolder;
    margin-left: 0.5em;
    /*float: left;*/
}

#driver-select button:hover {
    background-color: #ddd;
    color: #000;
}

.map-select button {
   border-radius: 20px;
   outline: none;
    cursor: pointer;
    display: inline-block;
    text-align: center;
    position: relative;
    height: 60px;
    width: 25%;
    margin-top: 20px;
    margin-bottom: 10px;
    font-size: 17px;
    background-color: black;
    color: white;
    font-weight: bolder;
    margin-left: 0.5em;
    /*float: left;*/
}

.map-select button:hover {
    background-color: #ddd;
    color: #000;
}

#driver-details{
    /*background-color: #10da8f1a;*/
    width: 100%;
}
#driver-select{
    /*background-color: #c7e9c0d6;*/
    width: 100%;
    margin-top: -1%;
}


#driver-names{
    width: 100%;
    height: 250px;
    display: flex;
    flex-wrap: wrap;
    padding-top: 1%;
    display: none;
    /*background-color: #10da8f4d;*/
}

#driver-names li{
    width: 20%;
    cursor: pointer;
}

.driver-title{
    font-family: Lato;
    font-size: 20px;
    font-weight: bold;
}
.driver-text{
    font-family: Lato;
    font-size: 15px;
}

#selected-drivers{
    display: inline-block;
    float: right;
    margin-top: -25%;
    margin-right: 10%;
}
#selected-drivers li{
    width: 150%;
    cursor: pointer;
    margin-top: 1%;
    font-size: 13px;
}

.driverName{
    text-anchor: middle;
}

h1, h2 {
    text-align: center;
    margin:0.8em;
}
h1 {
    letter-spacing: 6px;
    margin-bottom:1.5em;
    font-weight: 900;
}
h2 {
    margin-bottom:1em;
}

.chart {
    margin: 10px;
    padding-top: 10px;
}

#slider-container {
    position: relative;
    height:30px;
    background-color: #eeeef5;
    margin-left: 1%;
    margin-top: 0.5em;
}

.chart rect:hover {
    fill: #64707d;
}
.chart text {
    fill: #24da82;
}
.chart text.name {
    fill: black;
}
.chart text.title {
    fill: #2216ff;
}

#range-label {
    text-align: center;
    margin-top: 0.5em;
}

/* Style the tab */
.tab {
    margin-top : 43px;
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #FC0303;
    width: 100%;
    display: inline-block;
    /* border-bottom:2px solid dimgrey; */
}

/* Style the buttons inside the tab */
.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    /*padding-left: 80px;*/
    display:inline-block;
    transition: 0.3s;
    font-size: 17px;
    width: 21%;
    color: white;
    height: 2em;
    margin-left: 2%;
    margin-top: 0.5em;
    text-align: center;
}

/* Change background color of buttons on hover */
.tab button:hover {
    background-color: #ddd;
    color: #000;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #ffffff6b;
    color: black;
}

/* Style the tab content */
.tabcontent {
    display: none;
    /*padding: 6px 12px;*/
    /*border: 1px solid #ccc;*/
    /*border-top: none;*/
}

#info-box {
    color: #666;
    font-size: 28px;
    position: absolute;
    top: 30px;
    left: 100px;
}

.circleTeam {
    stroke: white;
    stroke-width: 1.5;
}


#Demo{
    text-align: center;
    margin-top: 50px;
    width : 100%;
}
#demo-video{
    width : 1000px;
}
/*Element Styling*/
/*ID Styling*/

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 12px;
  background: rgba(0, 0, 0, 0.8);
  color: #fff;
  border-radius: 2px;
}

.d3-tip:after {
  box-sizing: border-box;
  display: inline;
  font-size: 10px;
  width: 100%;
  line-height: 1;
  color: rgba(0, 0, 0, 0.8);
  content: "\25BC";
  position: absolute;
  text-align: center;
}
#map-chart {
    height: 450px;
}

#map-chart svg {
    width: 100%;
    height: 100%;
    margin: auto;
}

#map-chart svg {
   margin: auto;
}

/*class styling*/

.boundary {
    fill: none;
    stroke: #fff;
    stroke-width: .8px;
}

.countries {
    fill: #d9d9d9;
}

.stroke {
    fill: none;
    stroke: #000;
    stroke-width: 2px;
}

.graticule {
    fill: none;
    /*stroke: #777;*/
    stroke:#FC0303;
    stroke-width: .5px;
    stroke-opacity: .2;
    pointer-events: none;
}

.wrapper {
    width: 1600px;
    margin: auto;
}

.view {
    width: 750px;
    /*margin: auto;*/
    padding: 5px;
    display: inline-block;
    float: left;
}

.mapview {
    width: 850px;
    /*margin: auto;*/
    padding: 5px;
    display: inline-block;
    float: left;
}

.fullView{
    display: inline-block;
    width: 100%;
}

.innerWrapper {
    width: 790px;
    display: inline-block;
    float: left;
}

/* slider styling */

.slider {
    -webkit-appearance: none;
    width: 725px;
    height: 15px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
    margin-left: 20px
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #4CAF50;
    cursor: pointer;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #D4E157;
    cursor: pointer;
}

.slider:hover {
    opacity: 1;
}

.slider-label svg {
    width: 750px;
    height: 35px;
}

.slider-label svg text {
    text-anchor: middle;
}

.slider-wrap {
    display: inline-block;
    float: left;
    width: 750px;
    margin-left: 50px;
}

